--- a/Terminal/src/main/res/values/strings.xml
+++ b/Terminal/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Client</string>
+    <string name="app_name">Terminal</string>
     <string name="titleConnection">Client!</string>
     <string name="action_settings">Settings</string>
     <string name="titleGetTicket">Get Ticket</string>
